# LogGuardian

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: cli.py  main.py  normalizer.py  report_generator.py
src/logguardian/: analysis.py  cli.py  normalize.py  normalizer.py
